# datingapp

./: .gitignore  alembic.ini  pyproject.toml  test.db
migrations/: env.py
migrations/versions/: 2023_12_21_2225-a1a163eaf422_init.py  2023_12_26_1301-1bac4156315b_init.py  2023_12_26_1447-ffa68a527229_initial_user.py  2023_12_26_1512-fdda6e00a8bd_relations_and_model_match.py  2023_12_28_2110-81bf80aa0ecf_initial.py  2024_01_02_2149-1b1e862c718a_init.py  2024_01_02_2307-a04710d617ad_init.py  2024_01_04_2120-7f2eebc77691_init.py  2024_01_06_2102-788470c19a35_add_pk_on_match_user_id.py
src/: __init__.py  base.py  database.py  main.py  models.py  schemas.py
src/core/models/: __init__.py  users.py
src/matches/: __init__.py  crud.py  models.py  router.py  schemas.py
src/users/: config.py  manager.py  models.py  schemas.py  views.py
